Added body content to homepage

--- a/index.html
+++ b/index.html
@@ -26,6 +26,36 @@
                     <h5 class="card-title">Special title treatment</h5>
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                     <a href="#" class="btn btn-primary">See Imports</a>
+                    <h5 class="card-title">About Us</h5>
+                    <p class="card-text">
+                        <p>We are a food and commodity marketing business in Sydney, serving the import and export requirements of the Australian food manufacturing, food re-packing and food service industries. We are active in a range of mostly non-perishable products, and enclosed herewith you will find our Import Product List which highlight our actively traded items.</p>
+                        <p>Our clients, past and present, include most major Australian food producers, foodservice suppliers, as well as fruit and vegetable producers/ canners, and a number of re-packers and re-processors. Some of these companies are our export suppliers as well.</p>
+                        <p>The bulk of our import sales are to the institutional sector and in bulk or foodservice packaging. Payment for imports are on 60 to 75 day CAD basis after receipt and approval of goods by our end-clients. We act as principals on our import orders.</p>
+                        <p>Export shipments are made on the basis of firm orders placed by our clients in container loads, as we do not keep stocks of these products in overseas markets. Payment is by L/C or CAD via bank, as negotiated with client, and subject to due diligence process and track records with our overseas clients. Our trade bankers are Commonwealth Bank in Sydney.</p>
+                        <p>The Food & Commodity Products business was started in 1995 and is run by Mr Roney Moallem, who has been in the food and commodity trading business for the last 30 years.</p>
+                        <p>Please feel free to let us know if there are any particular product items you wish to enquire.</p>
+                    </p>
+                    <a href="./imports.html" class="btn btn-primary">See Imports</a>
+                </div>
+                <div class="card-footer text-muted text-center">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h5 class="card-title">Address</h5>
+                            <span>Suite 6, 141 Victoria Road</span>
+                            <br />
+                            <span>Drummoyne NSW 2047</span>
+                            <br />
+                            <span>Sydney, Australia</span>
+                        </div>
+                        <div class="col-md-6">
+                            <h5 class="card-title">Contact</h5>
+                            <span>Tel: <a href="#">+61 409 711 888</a></span>
+                            <br />
+                            <span>Fax: <a href="#">+61 2 9719 8580</a></span>
+                            <br />
+                            <span>Email: <a href="#">rmoallem@fcproducts.com.au</a></span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
