--- a/index.html
+++ b/index.html
@@ -11,21 +11,17 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About Us</a>
+                        <a class="nav-link" href="./index.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Our Imports</a>
+                        <a class="nav-link" href="./imports.html">Our Imports</a>
                     </li>
                 </ul>
             </div>
         </nav>
-        <div class="col-md-8 mx-auto mt-4">
+        <div class="col-md-8 mx-auto mt-5 mb-5">
             <div class="card">
-                <div class="card-header">About Us</div>
                 <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">See Imports</a>
                     <h5 class="card-title">About Us</h5>
                     <p class="card-text">
                         <p>We are a food and commodity marketing business in Sydney, serving the import and export requirements of the Australian food manufacturing, food re-packing and food service industries. We are active in a range of mostly non-perishable products, and enclosed herewith you will find our Import Product List which highlight our actively traded items.</p>
