Updated index page colours

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <html>
     <head>
+        <link rel="stylesheet" type="text/css" href="./style.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     </head>
-    <body class="bg-dark-green">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="./index.html">Food & Commodity Products</a>
+    <body class="bg-yellow">
+        <nav class="navbar navbar-expand-lg navbar-light bg-green">
+            <a class="navbar-brand font-header txt-yellow" href="./index.html">Food & Commodity Products</a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
@@ -19,11 +20,16 @@
                 </ul>
             </div>
         </nav>
+
+        <div class="col-md-6 mx-auto mt-5 mb-5">
+            <img src="./fcplogo.png">
+        </div>
+
         <div class="col-md-8 mx-auto mt-5 mb-5">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">About Us</h5>
-                    <p class="card-text">
+            <div class="card no-border">
+                <div class="card-body bg-green txt-yellow">
+                    <h5 class="card-title font-header">About Us</h5>
+                    <p class="card-text font-body">
                         <p>We are a food and commodity marketing business in Sydney, serving the import and export requirements of the Australian food manufacturing, food re-packing and food service industries. We are active in a range of mostly non-perishable products, and enclosed herewith you will find our Import Product List which highlight our actively traded items.</p>
                         <p>Our clients, past and present, include most major Australian food producers, foodservice suppliers, as well as fruit and vegetable producers/ canners, and a number of re-packers and re-processors. Some of these companies are our export suppliers as well.</p>
                         <p>The bulk of our import sales are to the institutional sector and in bulk or foodservice packaging. Payment for imports are on 60 to 75 day CAD basis after receipt and approval of goods by our end-clients. We act as principals on our import orders.</p>
