--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="./index.html">About Us</a>
+                        <span class="link">
+                            <a class="nav-link" href="./index.html">About Us</a>
+                        </span>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./imports.html">Our Imports</a>
+                        <span class="link">
+                            <a class="nav-link" href="./imports.html">Our Imports</a>
+                        </span>
                     </li>
                 </ul>
             </div>
