Fixed body text

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
             </div>
         </nav>
 
-        <div class="col-md-6 mx-auto mt-5 mb-5">
-            <img src="./fcplogo.png">
+        <div class="col-md-6 mx-auto mt-2 text-center">
+            <img class="logo" src="./fcplogo.png">
         </div>
 
-        <div class="col-md-8 mx-auto mt-5 mb-5">
-            <div class="card no-border">
+        <div class="col-md-8 mx-auto mt-2 mb-5">
+            <div class="card green-border">
                 <div class="card-body bg-green txt-yellow">
                     <h5 class="card-title font-header">About Us</h5>
-                    <p class="card-text font-body">
+                    <p class="card-text">
                         <p>We are a food and commodity marketing business in Sydney, serving the import and export requirements of the Australian food manufacturing, food re-packing and food service industries. We are active in a range of mostly non-perishable products, and enclosed herewith you will find our Import Product List which highlight our actively traded items.</p>
                         <p>Our clients, past and present, include most major Australian food producers, foodservice suppliers, as well as fruit and vegetable producers/ canners, and a number of re-packers and re-processors. Some of these companies are our export suppliers as well.</p>
                         <p>The bulk of our import sales are to the institutional sector and in bulk or foodservice packaging. Payment for imports are on 60 to 75 day CAD basis after receipt and approval of goods by our end-clients. We act as principals on our import orders.</p>
