Updated buttons and header formats

--- a/index.html
+++ b/index.html
@@ -42,12 +42,15 @@
                         <p>The Food & Commodity Products business was started in 1995 and is run by Mr Roney Moallem, who has been in the food and commodity trading business for the last 30 years.</p>
                         <p>Please feel free to let us know if there are any particular product items you wish to enquire.</p>
                     </p>
-                    <a href="./imports.html" class="btn btn-primary">See Imports</a>
+                    <br />
+                    <div class="text-center">
+                        <a href="./imports.html" class="btn btn-fcp">See Imports</a>
+                    </div>
                 </div>
-                <div class="card-footer text-muted text-center">
+                <div class="card-footer bg-green-dark text-center txt-yellow">
                     <div class="row">
                         <div class="col-md-6">
-                            <h5 class="card-title">Address</h5>
+                            <h5 class="card-title font-header">Address</h5>
                             <span>Suite 6, 141 Victoria Road</span>
                             <br />
                             <span>Drummoyne NSW 2047</span>
