Added mailto and tel links to contact section

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
                             <span>Sydney, Australia</span>
                         </div>
                         <div class="col-md-6">
-                            <h5 class="card-title">Contact</h5>
-                            <span>Tel: <a href="#">+61 409 711 888</a></span>
+                            <h5 class="card-title font-header">Contact</h5>
+                            <span class="link">Tel: <a href="tel:+61409711888">+61 409 711 888</a></span>
                             <br />
-                            <span>Fax: <a href="#">+61 2 9719 8580</a></span>
+                            <span class="link">Fax: <a href="tel:+61297198580">+61 2 9719 8580</a></span>
                             <br />
-                            <span>Email: <a href="#">rmoallem@fcproducts.com.au</a></span>
+                            <span class="link">Email: <a href="mailto:rmoallem@fcproducts.com.au">rmoallem@fcproducts.com.au</a></span>
                         </div>
                     </div>
                 </div>
