Added imports table

--- a/imports.html
+++ b/imports.html
@@ -42,6 +42,28 @@
                         <p>The Food & Commodity Products business was started in 1995 and is run by Mr Roney Moallem, who has been in the food and commodity trading business for the last 30 years.</p>
                         <p>Please feel free to let us know if there are any particular product items you wish to enquire.</p>
                     </p>
+                    <h4 class="card-title font-header">Import Products</h4>
+
+                    <table class="table table-custom">
+                        <tbody>
+                            <tr>
+                                <th scope="row">GHERKINS</th>
+                                <th scope="row">FROM</th>
+                            </tr>
+                            <tr>
+                                <td>In brine and/or vinegar</td>
+                                <td>India</td>
+                            </tr>
+                            <tr>
+                                <td>In drums</td>
+                                <td>Sri Lanka</td>
+                            </tr>
+                            <tr>
+                                <td>Whole, Sliced, Stackers, Quarters, Nubbins</td>
+                                <td>Turkey</td>
+                            </tr>
+                        </tbody>
+                    </table>
                     <br />
                     <div class="text-center">
                         <a href="./index.html" class="btn btn-fcp">Back to Home</a>
