Updated homepage styles for italics

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body class="bg-yellow">
         <nav class="navbar navbar-expand-lg navbar-light bg-green">
-            <a class="navbar-brand font-header txt-yellow" href="./index.html">Food & Commodity Products</a>
+            <a class="navbar-brand font-times txt-yellow" href="./index.html">Food & Commodity Products</a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
@@ -33,14 +33,14 @@
         <div class="col-md-8 mx-auto mt-2 mb-5">
             <div class="card green-border">
                 <div class="card-body bg-green txt-yellow">
-                    <h4 class="card-title font-header">About Us</h4>
+                    <h4 class="card-title font-times">About Us</h4>
                     <p class="card-text">
-                        <p>We are a food and commodity marketing business in Sydney, serving the import and export requirements of the Australian food manufacturing, food re-packing and food service industries. We are active in a range of mostly non-perishable products, and enclosed herewith you will find our Import Product List which highlight our actively traded items.</p>
-                        <p>Our clients, past and present, include most major Australian food producers, foodservice suppliers, as well as fruit and vegetable producers/ canners, and a number of re-packers and re-processors. Some of these companies are our export suppliers as well.</p>
-                        <p>The bulk of our import sales are to the institutional sector and in bulk or foodservice packaging. Payment for imports are on 60 to 75 day CAD basis after receipt and approval of goods by our end-clients. We act as principals on our import orders.</p>
-                        <p>Export shipments are made on the basis of firm orders placed by our clients in container loads, as we do not keep stocks of these products in overseas markets. Payment is by L/C or CAD via bank, as negotiated with client, and subject to due diligence process and track records with our overseas clients. Our trade bankers are Commonwealth Bank in Sydney.</p>
-                        <p>The Food & Commodity Products business was started in 1995 and is run by Mr Roney Moallem, who has been in the food and commodity trading business for the last 30 years.</p>
-                        <p>Please feel free to let us know if there are any particular product items you wish to enquire.</p>
+                        <p class="font-times italic">We are a food and commodity marketing business in Sydney, serving the import and export requirements of the Australian food manufacturing, food re-packing and food service industries. We are active in a range of mostly non-perishable products, and enclosed herewith you will find our Import Product List which highlight our actively traded items.</p>
+                        <p class="font-times italic">Our clients, past and present, include most major Australian food producers, foodservice suppliers, as well as fruit and vegetable producers/ canners, and a number of re-packers and re-processors. Some of these companies are our export suppliers as well.</p>
+                        <p class="font-times italic">The bulk of our import sales are to the institutional sector and in bulk or foodservice packaging. Payment for imports are on 60 to 75 day CAD basis after receipt and approval of goods by our end-clients. We act as principals on our import orders.</p>
+                        <p class="font-times italic">Export shipments are made on the basis of firm orders placed by our clients in container loads, as we do not keep stocks of these products in overseas markets. Payment is by L/C or CAD via bank, as negotiated with client, and subject to due diligence process and track records with our overseas clients. Our trade bankers are Commonwealth Bank in Sydney.</p>
+                        <p class="font-times italic">The Food & Commodity Products business was started in 1995 and is run by Mr Roney Moallem, who has been in the food and commodity trading business for the last 30 years.</p>
+                        <p class="font-times italic">Please feel free to let us know if there are any particular product items you wish to enquire.</p>
                     </p>
                     <br />
                     <div class="text-center">
@@ -50,7 +50,7 @@
                 <div class="card-footer bg-green-dark text-center txt-yellow">
                     <div class="row">
                         <div class="col-md-6">
-                            <h5 class="card-title font-header">Address</h5>
+                            <h5 class="card-title font-times">Address</h5>
                             <span>Suite 6, 141 Victoria Road</span>
                             <br />
                             <span>Drummoyne NSW 2047</span>
@@ -58,7 +58,7 @@
                             <span>Sydney, Australia</span>
                         </div>
                         <div class="col-md-6">
-                            <h5 class="card-title font-header">Contact</h5>
+                            <h5 class="card-title font-times">Contact</h5>
                             <span class="link">Tel: <a href="tel:+61409711888">+61 409 711 888</a></span>
                             <br />
                             <span class="link">Fax: <a href="tel:+61297198580">+61 2 9719 8580</a></span>
