Updated imports page titles

--- a/imports.html
+++ b/imports.html
@@ -9,7 +9,7 @@
     </head>
     <body class="bg-yellow">
         <nav class="navbar navbar-expand-lg navbar-light bg-green">
-            <a class="navbar-brand font-header txt-yellow" href="./index.html">Food & Commodity Products</a>
+            <a class="navbar-brand font-times txt-yellow" href="./index.html">Food & Commodity Products</a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
@@ -33,7 +33,9 @@
         <div class="col-md-8 mx-auto mt-2 mb-5">
             <div class="card green-border">
                 <div class="card-body bg-green txt-yellow">
-                    <h4 class="card-title font-header">Import Products</h4>
+                    <h4 class="card-title font-times text-center">Import Products</h4>
+                    <h5 class="card-title font-times text-center">Bulk & Foodservice Products</h5>
+
 
                     <table class="table table-custom">
                         <tbody>
