Fixed gherkins section in imports

--- a/imports.html
+++ b/imports.html
@@ -36,12 +36,35 @@
                     <h4 class="card-title font-times text-center">Import Products</h4>
                     <h5 class="card-title font-times text-center">Bulk & Foodservice Products</h5>
 
-
                     <table class="table table-custom">
                         <tbody>
                             <tr>
+                                <th scope="row">GHERKINS & GIARDINIERA</th>
+                            </tr>
+                            <tr>
+                                <td>Whole, Sliced, Stackers, Quarters</td>
+                                <td>India</td>
+                            </tr>
+                            <tr>
+                                <td>In brine, acid or vinegar, in bulk</td>
+                                <td>Sri Lanka</td>
+                            </tr>
+                            <tr>
+                                <td><u>Whole</u>, <u>Sliced</u>, <u>Stackers</u>, <u>Quarters</u></td>
+                                <td>Turkey</td>
+                            </tr>
+                            <tr>
+                                <td>Cornichons, Relish, Diced</td>
+                                <td>Greece</td>
+                            </tr>
+                            <tr>
+                                <td><u>Mixed Pickles</u> (Giardiniera)</td>
+                            </tr>
+                            <tr>
+                                <td>&nbsp;</td>
+                            </tr>
+                            <tr>
                                 <th scope="row">GHERKINS</th>
-                                <th scope="row">FROM</th>
                             </tr>
                             <tr>
                                 <td>In brine and/or vinegar</td>
