Updated home page copy

--- a/index.html
+++ b/index.html
@@ -35,11 +35,20 @@
                 <div class="card-body bg-green txt-yellow">
                     <h4 class="card-title font-times">About Us</h4>
                     <p class="card-text">
-                        <p class="font-times italic">We are a food and commodity marketing business in Sydney, serving the import and export requirements of the Australian food manufacturing, food re-packing and food service industries. We are active in a range of mostly non-perishable products, and enclosed herewith you will find our Import Product List which highlight our actively traded items.</p>
+                        <p class="font-times italic">We are a food and commodity marketing business based in Sydney, serving the import and export requirements of the Australian food manufacturing, food re-packing and food service industries.</p>
+
+                        <p class="font-times italic"> We are active in a range of mostly non-perishable products, and enclosed herewith you will find our Import Products List which highlight our actively traded items.</p>
+
                         <p class="font-times italic">Our clients, past and present, include most major Australian food producers, foodservice suppliers, as well as fruit and vegetable producers/ canners, and a number of re-packers and re-processors. Some of these companies are our export suppliers as well.</p>
-                        <p class="font-times italic">The bulk of our import sales are to the institutional sector and in bulk or foodservice packaging. Payment for imports are on 60 to 75 day CAD basis after receipt and approval of goods by our end-clients. We act as principals on our import orders.</p>
-                        <p class="font-times italic">Export shipments are made on the basis of firm orders placed by our clients in container loads, as we do not keep stocks of these products in overseas markets. Payment is by L/C or CAD via bank, as negotiated with client, and subject to due diligence process and track records with our overseas clients. Our trade bankers are Commonwealth Bank in Sydney.</p>
+
+                        <p class="font-times italic">Imports into Australia have been our main area of concentration in recent years. The bulk of our import sales are in container-load quantities sold to the domestic institutional sector and in bulk or foodservice packaging. We act as principals on our import orders.</p>
+
+                        <p class="font-times italic">Our main sources of direct imports have been Southeast Asia (India, China, Sri Lanka, Philippines), Europe (Spain, Holland, Hungary), North Africa (Morocco), and South America (Chile, Peru). For smaller than FCL Quantities, we also broker domestically stocked products from other sources.</p>
+
+                        <p class="font-times italic">Export shipments are made on the basis of firm orders placed by our clients in container loads - we do not keep stocks of these products in overseas markets. Payment is by L/C or CAD via bank, as negotiated with client, and subject to due diligence process and track records with our overseas clients. Our trade bankers are Commonwealth Bank of Australia in Sydney.</p>
+
                         <p class="font-times italic">The Food & Commodity Products business was started in 1995 and is run by Mr Roney Moallem, who has been in the food and commodity trading business for the last 30 years.</p>
+
                         <p class="font-times italic">Please feel free to let us know if there are any particular product items you wish to enquire.</p>
                     </p>
                     <br />
