--- a/imports.html
+++ b/imports.html
@@ -68,15 +68,25 @@
                                 <td>&nbsp;</td>
                             </tr>
                             <tr>
-                                <th scope="row">GHERKINS</th>
+                                <th scope="row">PRESERVED ONIONS</th>
                             </tr>
                             <tr>
-                                <td>In brine and/or vinegar</td>
+                                <td>Cocktail and Silverskin Onions</td>
+                                <td></td>
                                 <td>India</td>
                             </tr>
                             <tr>
-                                <td>In drums</td>
-                                <td>Sri Lanka</td>
+                                <td>Sliced White Onions</td>
+                                <td></td>
+                                <td>Holland</td>
+                            </tr>
+                            <tr>
+                                <td>In acid or vinegar, in Bulk</td>
+                            </tr>
+                            <tr>
+                                <td>&nbsp;</td>
+                            </tr>
+                            <tr>
                             </tr>
                             <tr>
                                 <td>Whole, Sliced, Stackers, Quarters, Nubbins</td>
