--- a/imports.html
+++ b/imports.html
@@ -87,9 +87,40 @@
                                 <td>&nbsp;</td>
                             </tr>
                             <tr>
+                                <th scope="row">OLIVES & TAPENADES</th>
                             </tr>
                             <tr>
-                                <td>Whole, Sliced, Stackers, Quarters, Nubbins</td>
+                                <td>In brine and/or vinegar, in Bulk</td>
+                                <td></td>
+                                <td>Greece</td>
+                            </tr>
+                            <tr>
+                                <td>Black</td>
+                                <td>Natural/Slashed</td>
+                                <td>Spain</td>
+                            </tr>
+                            <tr>
+                                <td>Green</td>
+                                <td>Whole-pipped</td>
+                                <td>Italy</td>
+                            </tr>
+                            <tr>
+                                <td>Spanish</td>
+                                <td>Sliced</td>
+                                <td>Morocco</td>
+                            </tr>
+                            <tr>
+                                <td>Kalamata-style</td>
+                                <td>Stuffed</td>
+                                <td>Turkey</td>
+                            </tr>
+                            <tr>
+                                <td><u>Olive Paste/ Tapenades</u></td>
+                                <td>Black/Green/Flavoured (Jars)</td>
+                            </tr>
+                            <tr>
+                                <td>&nbsp;</td>
+                            </tr>
                                 <td>Turkey</td>
                             </tr>
                         </tbody>
