--- a/imports.html
+++ b/imports.html
@@ -121,7 +121,40 @@
                             <tr>
                                 <td>&nbsp;</td>
                             </tr>
+                            <tr>
+                                <th scope="row">PRESERVED & CHARGRILLED VEGETABLES</th>
+                            </tr>
+                            <tr>
+                                <td><u>Roasted</u></td>
+                                <td>Eggplant Slices & Strips/Bulk and Jars</td>
+                            </tr>
+                            <tr>
+                                <td><u>Preserved</u></td>
+                                <td>Cauliflower/Carrots/Green Capsicum</td>
+                                <td>India</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td>Green Chilli/Beetroot/White Radish</td>
+                                <td>Greece</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td>Tomatoes/Garlic/Okra</td>
                                 <td>Turkey</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td>Red Peppers/Yellow Peppers</td>
+                                <td>Spain</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td>Sundried Tomato (Halves/Marinated/Strips)</td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>&nbsp;</td>
                             </tr>
                         </tbody>
                     </table>
