--- a/imports.html
+++ b/imports.html
@@ -156,6 +156,27 @@
                             <tr>
                                 <td>&nbsp;</td>
                             </tr>
+                            <tr>
+                                <th scope="row">CAPERS & CAPERBERRIES</th>
+                            </tr>
+                            <tr>
+                                <td>Whole Capers, Milled  Capers, and Caperberries</td>
+                                <td></td>
+                                <td>Greece</td>
+                            </tr>
+                            <tr>
+                                <td>Capers in brine, dry salt, or vinegar</td>
+                                <td></td>
+                                <td>Turkey</td>
+                            </tr>
+                            <tr>
+                                <td>In drums/foodservice cans</td>
+                                <td></td>
+                                <td>Spain</td>
+                            </tr>
+                            <tr>
+                                <td>&nbsp;</td>
+                            </tr>
                         </tbody>
                     </table>
                     <br />
