--- a/imports.html
+++ b/imports.html
@@ -177,6 +177,24 @@
                             <tr>
                                 <td>&nbsp;</td>
                             </tr>
+                            <tr>
+                                <th scope="row">JALAPENA PEPPERS</th>
+                                <td></td>
+                                <td>Mexico</td>
+                            </tr>
+                            <tr>
+                                <td>Slices/Halves/Whole</td>
+                                <td></td>
+                                <td>Peru</td>
+                            </tr>
+                            <tr>
+                                <td>In bulk and foodservice cans</td>
+                                <td></td>
+                                <td>India</td>
+                            </tr>
+                            <tr>
+                                <td>&nbsp;</td>
+                            </tr>
                         </tbody>
                     </table>
                     <br />
