--- a/imports.html
+++ b/imports.html
@@ -195,6 +195,28 @@
                             <tr>
                                 <td>&nbsp;</td>
                             </tr>
+                            <tr>
+                                <th scope="row">ASPARAGUS & ARTICHOKES</th>
+                            </tr>
+                            <tr>
+                                <td><u>Asparagus</u></td>
+                                <td>Spears and Tips & Cuts</td>
+                                <td>Peru</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td>Green and White</td>
+                                <td>China</td>
+                            </tr>
+                            <tr>
+                                <td><u>Artichokes</u></td>
+                                <td>In brine and oil</td>
+                                <td>Greece</td>
+                            </tr>
+                            <tr>
+                                <td>&nbsp;</td>
+                            </tr>
+                            <tr>
                         </tbody>
                     </table>
                     <br />
