--- a/imports.html
+++ b/imports.html
@@ -217,6 +217,29 @@
                                 <td>&nbsp;</td>
                             </tr>
                             <tr>
+                                <th scope="row">PEPPERS & PEPPERONI</th>
+                            </tr>
+                            <tr>
+                                <td>Green Mild/Hot, in drums/cans</td>
+                                <td></td>
+                                <td>Turkey</td>
+                            </tr>
+                            <tr>
+                                <td>Red Bell Pepper Stripes, Lombardi Peppers</td>
+                                <td></td>
+                                <td>India</td>
+                            </tr>
+                            <tr>
+                                <td>Fefferoni, Mild & Hot</td>
+                                <td></td>
+                                <td>Greece</td>
+                            </tr>
+                            <tr>
+                                <td>Minced Paprika (Ajvar) & (Malizzano)</td>
+                                <td></td>
+                                <td>Macedonia</td>
+                            </tr>
+                            <tr>
                         </tbody>
                     </table>
                     <br />
