--- a/imports.html
+++ b/imports.html
@@ -240,6 +240,39 @@
                                 <td>Macedonia</td>
                             </tr>
                             <tr>
+                                <td>&nbsp;</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">TOMATO PRODUCTS</th>
+                            </tr>
+                            <tr>
+                                <td>Paste, HB and CB, in drums or bulk palicons</td>
+                                <td></td>
+                                <td>China</td>
+                            </tr>
+                            <tr>
+                                <td>Puree, in foodservice cans or drums</td>
+                                <td></td>
+                                <td>Chile</td>
+                            </tr>
+                            <tr>
+                                <td>Whole-Peeled & Diced, in foodservice cans</td>
+                                <td></td>
+                                <td>Thailand</td>
+                            </tr>
+                            <tr>
+                                <td>Crushed/Chopped, in bulk</td>
+                                <td></td>
+                                <td>Turkey</td>
+                            </tr>
+                            <tr>
+                                <td>Pizza Sauce, in foodservice cans</td>
+                                <td></td>
+                                <td>USA</td>
+                            </tr>
+                            <tr>
+                                <td>&nbsp;</td>
+                            </tr>
                         </tbody>
                     </table>
                     <br />
