--- a/imports.html
+++ b/imports.html
@@ -273,6 +273,22 @@
                             <tr>
                                 <td>&nbsp;</td>
                             </tr>
+                            <tr>
+                                <th scope="row">MUSHROOM CHAMPIGNONS</th>
+                            </tr>
+                            <tr>
+                                <td>Whole, Pieces & Stems</td>
+                                <td></td>
+                                <td>China</td>
+                            </tr>
+                            <tr>
+                                <td>In brine, in cans</td>
+                                <td></td>
+                                <td>Thailand</td>
+                            </tr>
+                            <tr>
+                                <td>&nbsp;</td>
+                            </tr>
                         </tbody>
                     </table>
                     <br />
