--- a/imports.html
+++ b/imports.html
@@ -289,6 +289,24 @@
                             <tr>
                                 <td>&nbsp;</td>
                             </tr>
+                            <tr>
+                                <th scope="row">BABY CORN/BROKEN CORN/SWEETCORN KERNELS</th>
+                                <td></td>
+                                <td>China</td>
+                            </tr>
+                            <tr>
+                                <td>In brine, in foodservice cans</td>
+                                <td></td>
+                                <td>Thailand</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td>India</td>
+                            </tr>
+                            <tr>
+                                <td>&nbsp;</td>
+                            </tr>
                         </tbody>
                     </table>
                     <br />
