--- a/imports.html
+++ b/imports.html
@@ -307,6 +307,24 @@
                             <tr>
                                 <td>&nbsp;</td>
                             </tr>
+                            <tr>
+                                <th scope="row">PINEAPPLE</th>
+                            </tr>
+                            <tr>
+                                <td>Tidbits & Rings, in cans or bags</td>
+                                <td></td>
+                                <td>Thailand</td>
+                            </tr>
+                            <tr>
+                                <td>Juice Concentrate, in aseptic/drums</td>
+                                <td></td>
+                                <td>China</td>
+                            </tr>
+                            <tr>
+                                <td>Crushed, in cans</td>
+                                <td></td>
+                                <td>Philippines</td>
+                            </tr>
                         </tbody>
                     </table>
                     <br />
