--- a/imports.html
+++ b/imports.html
@@ -326,6 +326,22 @@
                                 <td></td>
                                 <td>Philippines</td>
                             </tr>
+                            <tr>
+                                <td>&nbsp;</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">PAPAYA</th>
+                                <td></td>
+                                <td>Thailand</td>
+                            </tr>
+                            <tr>
+                                <td>Chunks, Dices, Piece, in foodservice cans</td>
+                                <td></td>
+                                <td>Philippines</td>
+                            </tr>
+                            <tr>
+                                <td>&nbsp;</td>
+                            </tr>
                         </tbody>
                     </table>
                     <br />
